# QuteSkatGame

./: .gitignore  .project  CMakeLists.txt  Doxyfile  QuteSkatGame.kdev4  README.md
.kdev4/: QuteSkatGame.kdev4
res/: resources.qrc
src/: KI.h  card.cpp  card.h  cardvec.cpp  cardvec.h  definitions.cpp  definitions.h  game.cpp  game.h  helperFunctions.cpp  helperFunctions.h  main.cpp  matrix.cpp  matrix.h  player.cpp  player.h  skat.cpp  table.cpp  table.h  table.ui  tricks.cpp  tricks.h  xmain  xmain.cpp
tests/: tester.cpp  tst_bieten.cpp  tst_card.cpp  tst_cardpower.cpp  tst_reizen.cpp  tst_spielwert.cpp
